--- a/markdowns/MSstats_PD_SS.Rmd
+++ b/markdowns/MSstats_PD_SS.Rmd
@@ -5,16 +5,13 @@ date: '2022-11-18'
 output: html_document
 ---
 
-Created: 2022/11/18
-Last modified: 2023/01/30
-Written by: Sam Siljee
+Created: 2022/11/18 Last modified: 2023/01/30 Written by: Sam Siljee
 
-This is my script to run proteomics data from mass spectrometry through the `MSstats` package for normalisation, quantification, and some QC.
-This is based on the following tutorial:
+This is my script to run proteomics data from mass spectrometry through the `MSstats` package for normalisation, quantification, and some QC. This is based on the following tutorial:
 
-https://meenachoi.github.io/MayInstitute2019RstatsMS/
+<https://meenachoi.github.io/MayInstitute2019RstatsMS/>
 
-Please see the tutorial or the `MSstats` package help for details on how to use the package, for any other assistance or advice you can contact Sam at samsiljee@gmail.com or through his github:
+Please see the tutorial or the `MSstats` package help for details on how to use the package, for any other assistance or advice you can contact Sam at [samsiljee\@gmail.com](mailto:samsiljee@gmail.com){.email} or through his github:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -29,10 +26,8 @@ output_dir <- "~/Coding/MSstats-tutorial/data/OT_vs_IT/output/"
 ```
 
 # Data import
-This workflow is to import data at the PSM table from Proteome Discoverer 2.4 (PD). Although quantification and normalisation is done better in R, you still need to run all samples in the same analysis in order for PD to include precursor abundance in the output table.
-After running the analysis in PD, select File > Export > To Text (tab delimited), and save with an appropriate name. Copy it to the input folder.
-THis chunk reads in the raw PSM table and annotations file, and formats them for use by `MSstats`.
-The generated input object takes the form of a data.frame with appropriate columns.
+
+This workflow is to import data at the PSM table from Proteome Discoverer 2.4 (PD). Although quantification and normalisation is done better in R, you still need to run all samples in the same analysis in order for PD to include precursor abundance in the output table. After running the analysis in PD, select File \> Export \> To Text (tab delimited), and save with an appropriate name. Copy it to the input folder. THis chunk reads in the raw PSM table and annotations file, and formats them for use by `MSstats`. The generated input object takes the form of a data.frame with appropriate columns.
 
 ```{r data import, echo = FALSE}
 # Read raw data from PSM table
@@ -70,12 +65,8 @@ colnames(input)
 ```
 
 # Data Processing
-This chunk processes the input data including normalisation, censored cutoff, cleaning, and protein-level summarization. It saves the result in the output folder in the R data format. Please see `?dataProcess` for details on arguments for normalisation methods etc.
-Note that it gives warnings "Warning: Ran out of iterations and did not converge" I understand that this does not affect the output.
-The output object is structured as a list of three;
-  1. data.frame "FeatureLevelData" of PSM abundances, new abundances, censored etc.
-  2. data.frame "ProteinLevelData" of intensities and some QC stuff, missing features, imputed features, etc.
-  3. character "SummaryMethod", describing the method used (Tukey's median polish)
+
+This chunk processes the input data including normalisation, censored cutoff, cleaning, and protein-level summarization. It saves the result in the output folder in the R data format. Please see `?dataProcess` for details on arguments for normalisation methods etc. Note that it gives warnings "Warning: Ran out of iterations and did not converge" I understand that this does not affect the output. The output object is structured as a list of three; 1. data.frame "FeatureLevelData" of PSM abundances, new abundances, censored etc. 2. data.frame "ProteinLevelData" of intensities and some QC stuff, missing features, imputed features, etc. 3. character "SummaryMethod", describing the method used (Tukey's median polish)
 
 ```{r data processing, echo = FALSE}
 # Process the input
@@ -91,6 +82,7 @@ save(processed, file = paste(output_dir, "processed.rda", sep = ""))
 ```
 
 # Data visualisation
+
 These plots are from functions built-in to `MSstats` and are for quality control.
 
 ```{r data visualisation, echo = FALSE}
@@ -123,14 +115,8 @@ dataProcessPlots(processed,
 ```
 
 # Model-based comparison, and adjusted p-value
-First you will need to set up a comparison matrix describing which samples to compare to the others. This is dependant on the order of your runs.
-A matrix is used with each row as a particular combination of comparisons.
-Alternatively, "pairwise" for contrast.matrix argument.
-I was initially getting an error in the `groupComparison` call, however I believe this is due to the fact that I had uneven numbers of runs. The sum of each row of the comparison matrix should always be 0, with each group totalling to one. This can be fixed by using fractions when indicating multiple samples from the same group. However, I have not quite gotten this to work yet.
-The output file is a list of 3 elements;
-  1. data.frame "ComparisonResult" with log2FC, pvalue, etc. by protein
-  2. data.frame "ModelQC" with abundances etc
-  3. list "FittedModel" with one model for each protein of class 'lmerMod' from the `lme4` package
+
+First you will need to set up a comparison matrix describing which samples to compare to the others. This is dependant on the order of your runs. A matrix is used with each row as a particular combination of comparisons. Alternatively, "pairwise" for contrast.matrix argument. I was initially getting an error in the `groupComparison` call, however I believe this is due to the fact that I had uneven numbers of runs. The sum of each row of the comparison matrix should always be 0, with each group totalling to one. This can be fixed by using fractions when indicating multiple samples from the same group. However, I have not quite gotten this to work yet. The output file is a list of 3 elements; 1. data.frame "ComparisonResult" with log2FC, pvalue, etc. by protein 2. data.frame "ModelQC" with abundances etc 3. list "FittedModel" with one model for each protein of class 'lmerMod' from the `lme4` package
 
 ```{r model based comparison, echo = FALSE}
 # Set up the comparison matrix.
